[package]
name = "mycrypt"
version = "0.1.0"
edition = "2021"
authors = ["Aoden"]
description = "Gelişmiş AES-GCM-SIV tabanlı dosya şifreleme ve çözme aracı"

[dependencies]
# Şifreleme kütüphaneleri
aes-gcm-siv = "0.11.1"  # AES-GCM-SIV şifreleme için
rand = "0.8.5"          # Rastgele sayı üretimi için
sha2 = "0.10.8"         # SHA256 için
hmac = "0.12.1"         # HMAC doğrulama için
argon2 = "0.5.2"        # Anahtar türetme için
zeroize = "1.6.0"       # Bellek temizleme için

# CLI arabirimi için
clap = { version = "4.4.7", features = ["derive"] }
rpassword = "7.2.0"     # Güvenli şifre girişi için
indicatif = "0.17.7"    # İlerleme çubukları için

# Hata yönetimi için
thiserror = "1.0.50"    # Özel hata türleri tanımlamak için

[profile.release]
# Optimizasyonlar
opt-level = 3           # Maksimum optimizasyon
lto = true              # Link time optimizasyonu
codegen-units = 1       # Daha agresif optimizasyon için
panic = "abort"         # Daha küçük binary boyutu için
strip = true            # Binary'den debug sembollerini çıkarır

[profile.dev]
opt-level = 1           # Geliştirme için daha hızlı derleme, kabul edilebilir performans
